# OpenVX-sample-impl

./: .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  Android.mk  BUILD_DEFINES  Build.py  CMakeLists.txt  LICENSE  Makefile  NEWKERNEL.txt  README  README.md
cmake_utils/: CMakeFuncs.txt  CMake_android_tools.cmake  CMake_linux_tools.cmake  CMake_windows_tools.cmake  FindOpenCL.cmake
concerto/: combo.mak  combo_filters.mak  definitions.mak  finale.mak  machine.mak  os.mak  platform.mak  prelude.mak  rules.mak  scm.mak  shell.mak  target.mak
debug/: Android.mk  CMakeLists.txt  concerto.mak  vx_debug.c  vx_debug.h
examples/: Android.mk  CMakeLists.txt  concerto.mak  vx_arrayrange.c  vx_callback.c  vx_convolution.c  vx_delaygraph.c  vx_examples.h  vx_extensions.c  vx_eyetrack.c  vx_factory_corners.c  vx_factory_edge.c  vx_factory_pipeline.c  vx_graph_factory.c  vx_graph_factory.h  vx_imagepatch.c  vx_independent.c  vx_introspection.c  vx_kernels.c  vx_matrix_access.c  vx_multi_node_graph.c  vx_parameters.c  vx_single_node_graph.c  vx_super_res.c  vx_tiling_add.c  vx_tiling_alpha.c  vx_tiling_box.c  vx_tiling_ext.c  vx_tiling_ext.h  vx_tiling_gaussian.c  vx_tiling_main.c  vx_warps.c  vx_xyz_lib.c  vx_xyz_module.c  xyz.def
helper/: Android.mk  CMakeLists.txt  concerto.mak  (+1 more)
include/: CMakeLists.txt  concerto.mak
include/VX/: vx_api.h  vx_ext_target.h  vx_helper.h  vx_khr_nn.h  vx_khr_node_memory.h  vx_khr_opencl.h  vx_khr_pipelining.h  vx_lib_extras.h
include/windows/: stdint.h
kernels/: Android.mk  CMakeLists.txt  README
kernels/c_model/: Android.mk  CMakeLists.txt  c_absdiff.c  c_accumulate.c  c_addsub.c  c_bilateral_filter.c  c_bitwise.c  c_channel.c  c_controlflow.c  c_conv3x3.c  c_convertcolor.c  c_convertdepth.c  c_convolve.c  c_copy.c  c_fast9.c  c_filter.c  c_histogram.c  c_hog.c  c_houghlinesp.c  c_integralimage.c  c_khr_nn.c  c_lbp.c  c_lut.c  c_magnitude.c  c_matchtemplate.c  c_minmax.c  c_model.h  c_morphology.c  c_multiply.c  c_nonlinearfilter.c  c_nonmaxsuppression.c  c_optpyrlk.c  c_phase.c  c_scale.c  c_sobel3x3.c  c_statistics.c  c_tensor_lut.c  c_tensor_multiply_matrix.c  c_tensor_op.c  c_tensor_transpose.c  (+4 more)
kernels/debug/: Android.mk  CMakeLists.txt  concerto.mak  d_copy.c  d_file.c  debug_k.h
kernels/extras/: CMakeLists.txt  concerto.mak  e_filter.c  e_nonmax.c  extras_k.h
kernels/nnef_parser/: CMakeLists.txt  nnef_parser.cpp  nnef_parser.h
kernels/opencl/: vx_absdiff.cl  vx_and.cl  vx_box3x3.cl  vx_convolve.cl  vx_dilate3x3.cl  vx_erode3x3.cl  vx_gaussian3x3.cl  vx_median3x3.cl  vx_nonlinearfilter.cl  vx_not.cl  vx_orr.cl  vx_phase.cl  vx_sobel3x3.cl  vx_threshold.cl  vx_warp_affine.cl  vx_warp_perspective.cl  vx_xor.cl
kernels/tiling/: CMakeLists.txt  concerto.mak  tiling.h  tiling_absdiff.c  tiling_addsub.c  tiling_bitwise.c  tiling_channel.c  tiling_convertcolor.c  tiling_convertdepth.c  tiling_convolve.c  tiling_fast9.c  tiling_filter.c  tiling_hog.c  tiling_houghlinesp.c  tiling_integralimage.c  tiling_lbp.c  tiling_lut.c  tiling_magnitude.c  tiling_minmax.c  tiling_morphology.c  tiling_multiply.c  tiling_nonlinearfilter.c  tiling_nonmaxsuppression.c  tiling_phase.c  tiling_scale.c  tiling_sobel3x3.c  tiling_threshold.c  tiling_warp.c  tiling_weighted_average.c
kernels/venum/: CMakeLists.txt  venum.h  venum_absdiff.c  venum_accumulate.c  venum_addsub.c  venum_bilateral_filter.c  venum_bitwise.c  venum_channel.c  venum_convertcolor.c  venum_convertdepth.c  venum_convolve.c  venum_copy.c  venum_fast9.c  venum_filter.c  venum_gaussian5x5.c  venum_histogram.c  venum_hog.c  venum_houghlinesp.c  venum_integralimage.c  venum_lbp.c  venum_lut.c  venum_magnitude.c  venum_matchtemplate.c  venum_minmax.c  venum_morphology.c  venum_multiply.c  venum_nonlinearfilter.c  venum_nonmaxsuppression.c  venum_phase.c  venum_pyramid.c  venum_scale.c  venum_sobel3x3.c  venum_statistics.c  venum_tensor_lut.c  venum_tensor_multiply_matrix.c  venum_tensor_op.c  venum_tensor_transpose.c  venum_threshold.c  venum_warp.c  venum_weighted_average.c
libraries/debug/: Android.mk  CMakeLists.txt  concerto.mak  openvx-debug.def  vx_check.c  vx_compare.c  vx_copy.c  vx_debug_lib.c  vx_debug_module.c  vx_debug_module.h  vx_file.c  vx_fill.c
sample/cnn/cnn_network/: CMakeLists.txt  cnn_network.def  network.cpp  network.h
sample/cnn/cnn_test/: CMakeLists.txt  test.cpp
sample/framework/: Android.mk  CMakeLists.txt  concerto.mak  openvx.def  vx_array.c  vx_context.c  vx_convolution.c  vx_delay.c  vx_distribution.c  vx_dot.c  vx_error.c  vx_event_queue.c  vx_graph.c  vx_graph_pipeline.c  vx_graph_stream.c  vx_image.c  vx_import.c  vx_ix_export.c  vx_ix_format.txt  vx_ix_import.c  vx_kernel.c  vx_khr_import_kernel.c  vx_khr_user_data_object.c  vx_log.c  vx_lut.c  vx_matrix.c  vx_memory.c  vx_meta_format.c  vx_node.c  vx_node_api.c  vx_node_nn_api.c  vx_object_array.c  vx_osal.c  vx_parameter.c  vx_pyramid.c  vx_reference.c  vx_remap.c  vx_scalar.c  vx_target.c  vx_tensor.c  (+4 more)
sample/targets/opencl/: CMakeLists.txt  concerto.mak  openvx-target.def  vx_absdiff.c  vx_bitwise.c  vx_convolution.c  vx_filter.c  vx_gradients.c  vx_interface.c  vx_interface.h  vx_morphology.c  vx_nonlinearfilter.c  vx_phase.c  vx_support.c  vx_support.h  vx_threshold.c  vx_warp.c
sample/targets/tiling/: CMakeLists.txt  openvx-target.def  vx_absdiff.c  vx_addsub.c  vx_bitwise.c  vx_channelcombine.c  vx_colorconvert.c  vx_convertdepth.c  vx_convolution.c  vx_fast9.c  vx_filter.c  vx_gradients.c  vx_hog.c  vx_houghlinesP.c  vx_integralimage.c  vx_interface.c  vx_interface.h  vx_lbp.c  vx_lut.c  vx_magnitude.c  vx_minmax.c  vx_morphology.c  vx_multiply.c  vx_nonlinearfilter.c  vx_nonmaxsuppression.c  vx_phase.c  vx_remap.c  vx_scale.c  vx_threshold.c  vx_warp.c  vx_weighted_average.c
sample/tests/: Android.mk  CMakeLists.txt  concerto.mak  vx_bug13510.c  vx_bug13517.c  vx_bug13518.c  vx_cam_test.c  vx_test.c
sample/vxu/: Android.mk  CMakeLists.txt  concerto.mak  vx_utility.c  vx_utility.def
utils/half/: CMakeLists.txt  half.hpp  sip_ml_fp16.cpp  sip_ml_fp16.hpp
(+217 files in other folders)
